<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tibco.test</groupId>
  <artifactId>cloudbus-selenium</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <packaging>jar</packaging>
  <url>http://maven.apache.org</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
 
  <dependencies>
  	<dependency>
		<groupId>org.jbehave</groupId>
		<artifactId>jbehave-core</artifactId>
		<version>3.8</version>
	</dependency>     
    <dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
	</dependency>
	<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
	</dependency>
	<dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-core</artifactId>
        <version>1.0.13</version>
        <scope>runtime</scope>
    </dependency>
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-classic</artifactId>
		<version>1.0.13</version>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.hamcrest</groupId>
		<artifactId>hamcrest-all</artifactId>
		<version>1.3</version>
	</dependency>
	<dependency>
		<groupId>dom4j</groupId>
		<artifactId>dom4j</artifactId>
		<version>1.6.1</version>
	</dependency>

	<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.33.0</version>
	</dependency>
	<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.12</version>		
	</dependency>
	<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
	</dependency>
	<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>1.3.1</version>
	</dependency>
	
<!-- slf4j simple
	<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.5</version>
			<scope>runtime</scope>
	</dependency>
-->

            
    <dependency>
		<groupId>org.apache.ant</groupId>
		<artifactId>ant</artifactId>
		<version>1.7.1</version>
	</dependency>
      <dependency> 
    <groupId>xml-apis</groupId>
    <artifactId>xml-apis</artifactId>
    <version>1.4.01</version>
</dependency>      
  </dependencies>
   <build>
    <defaultGoal>clean</defaultGoal>
	<plugins>
	<!-- <plugin>
                <groupId>org.jbehave</groupId>
                <artifactId>jbehave-maven-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>map-stories</id>
      <phase>integration-test</phase>
      <configuration>
        <includes>
          <include>**/BDD/*.story</include>
        </includes>
        <metaFilters>
          <metaFilter>+author *</metaFilter>
          <metaFilter>+theme *</metaFilter>
          <metaFilter>-skip</metaFilter>
        </metaFilters>              
      </configuration>
      <goals>
        <goal>map-stories-as-paths</goal>
      </goals>
                    </execution>
                </executions>
            </plugin>
	-->
        <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>selenium-maven-plugin</artifactId>
                <version>2.3</version>
        </plugin>
		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>2.15</version>
  			<configuration>
              <includes>
              		<include>**/TestSet.java</include>
              </includes>
              <forkCount>8</forkCount>
       		  <reuseForks>false</reuseForks>
       		  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
              <testFailureIgnore>true</testFailureIgnore>
            </configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.1</version>
			<configuration>
				<source>1.5</source>
				<target>1.5</target>
			</configuration>
      </plugin>
    <plugin>
  		<groupId>org.apache.maven.plugins</groupId>
  		<artifactId>maven-scm-plugin</artifactId>
 		 <version>1.7</version>
 		 <configuration>
		    <username>qa</username>
		    <password>qa</password>
 		   <checkoutDirectory>D:\workspace_tibco\cloudbus</checkoutDirectory>
 		   <workingDirectory>D:\workspace_tibco\cloudbus</workingDirectory>
		  </configuration>
		</plugin>
  	  </plugins>
   </build>
   <!-- Environment Settings -->
    <scm>
  	  <connection>scm:svn:http://svn.tibco.com:8008/cloud/trunk/CloudBus/QA/UI_Automation/cloudbus_selenium</connection>
  	  <developerConnection>scm:svn:http://svn.tibco.com:8008/cloud/trunk/CloudBus/QA/UI_Automation/cloudbus_selenium</developerConnection>
 	  <tag>HEAD</tag>
	  <url>http://svn.tibco.com:8008/cloud/trunk/CloudBus/QA/UI_Automation/cloudbus_selenium</url>
 	 </scm>
</project>